css bugs fixed
visibility and overflows fixed along with the card for the form

--- a/elective_management/src/index.css
+++ b/elective_management/src/index.css
@@ -16,7 +16,7 @@
   }
   .img1{
     filter:blur(2.5px);
-    height:750px;
+    height:fill;
     width:1550px;
   }
 
